--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
   }
   body {
     font-family: Calluna, Arial, sans-serif;
-    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/times-square-perspective.jpg);
+    background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), url(Assets/NNRBanner_1.png);
     background-repeat: no-repeat;
     background-attachment: fixed !important;
     background-size: 100% !important;
